--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -124,11 +124,20 @@
   \postauthor{\par}
   \predate{\centering\large\emph}
   \postdate{\par}
-  \date{2017-01-19}
+  \date{2017-01-22}
 
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{framed,color}
+\usepackage{float}
+\let\origfigure\figure
+\let\endorigfigure\endfigure
+\renewenvironment{figure}[1][2] {
+    \expandafter\origfigure\expandafter[H]
+} {
+    \endorigfigure
+}
+
 \definecolor{shadecolor}{RGB}{248,248,248}
 
 \ifxetex
@@ -1242,7 +1251,8 @@ the \texttt{plot()} function, type \texttt{?plot}.
 
 \CommentTok{# Sampling from a Normal - 100 random points from a N(0, 1)}
 \KeywordTok{rnorm}\NormalTok{(}\DataTypeTok{n =} \DecValTok{10}\NormalTok{, }\DataTypeTok{mean =} \DecValTok{0}\NormalTok{, }\DataTypeTok{sd =} \DecValTok{1}\NormalTok{)}
-\CommentTok{#ans>  [1]  0.189  1.246  1.302 -2.141  0.533 -0.725 -1.291 -1.815 -0.558 -1.132}
+\CommentTok{#ans>  [1]  1.1582 -0.5217  0.8044 -1.4379 -0.7891  0.0433 -1.4176 -0.1814}
+\CommentTok{#ans>  [9]  0.4807 -0.5889}
 
 \CommentTok{# If you want to have always the same result, set the seed of the random number}
 \CommentTok{# generator}
@@ -2375,7 +2385,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-01-19 12:55:58"
+date: "2017-01-22 19:54:44"
 output:
   html_document:
     toc: true
@@ -2763,6 +2773,283 @@ can be rewritten as
 
 Just as in the simple logistic regression we use the maximum likelihood
 method to estimate \(\beta_0,\beta_1,\ldots,\beta_p\).
+
+\chapter*{PW 3}\label{pw-3}
+\addcontentsline{toc}{chapter}{PW 3}
+
+\section*{Report template}\label{report-template}
+\addcontentsline{toc}{section}{Report template}
+
+For this week, download the following template by clicking on this
+\href{files/LastName_FirstName_Week3.Rmd}{link} (right cligk and save
+link as). Save the template in your folder that you are going to use as
+working directory. Rename the file (replace LastName by your last name
+and FirstName by your first name). Open it in \texttt{Rstudio} and use
+it for your report to be submitted.
+
+\section*{Social Networks Ads}\label{social-networks-ads}
+\addcontentsline{toc}{section}{Social Networks Ads}
+
+In this PW we are going to analyse the \texttt{Social\_Network\_Ads}
+dataset. This dataset contains informations of users of a social
+network. The social network has several business clients and its
+business clients put ads on the social network for marketing compaigns
+purposes. For this dataset, a company has put ads for one of its new
+products and the social network gathered some informations about wich
+users responded positively to the ad by buying the product and those who
+responded negatively by not buying the product.
+
+\textbf{1.} Download the \texttt{Social\_Network\_Ads} dataset from
+\href{datasets/Social_Network_Ads.csv}{here} and import it into
+\texttt{R}.
+
+\textbf{2.} Describe the dataset (you can use \texttt{str()} and
+\texttt{summary()} functions).
+
+We will consider the variables \texttt{Age} and \texttt{EstimatedSalary}
+as input variables (features) to see the correlations between them and
+the decision of the user to buy (or not) the product.
+
+\textbf{3.} Is the target variable \texttt{Purchased} is of type factor?
+If not, Encode it as a factor with levels 0 and 1.
+
+\textbf{4.} Now we are going to split the dataset into training set and
+test set. Last week we did it manually. From now on we will split it
+randomly with this code,
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(caTools) }\CommentTok{# install it first in the console}
+\KeywordTok{set.seed}\NormalTok{(}\DecValTok{123}\NormalTok{) }
+\CommentTok{# we use this function with the same number }
+\CommentTok{# to randomly generate the same values}
+\NormalTok{split =}\StringTok{ }\KeywordTok{sample.split}\NormalTok{(dataset$Purchased, }\DataTypeTok{SplitRatio =} \FloatTok{0.75}\NormalTok{) }
+\CommentTok{# here we chose the SplitRatio to 75% of the dataset, }
+\CommentTok{# and 25% for the test set.}
+\NormalTok{training_set =}\StringTok{ }\KeywordTok{subset}\NormalTok{(dataset, split ==}\StringTok{ }\OtherTok{TRUE}\NormalTok{) }
+\CommentTok{# we use subset to split the dataset}
+\NormalTok{test_set =}\StringTok{ }\KeywordTok{subset}\NormalTok{(dataset, split ==}\StringTok{ }\OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\textbf{5.} Scale the input variables in both training set and test set.
+
+First let us fit a simple logistic regression model of
+\texttt{Purchased} in function of \texttt{Age}. We do it with this line
+of code,
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{classifier <-}\StringTok{ }\KeywordTok{glm}\NormalTok{(Purchased ~}\StringTok{ }\NormalTok{Age , }\DataTypeTok{family =} \NormalTok{binomial, }\DataTypeTok{data=}\NormalTok{training_set)}
+\CommentTok{# glm goes for generalized linear model}
+\end{Highlighting}
+\end{Shaded}
+
+\textbf{6.} In the argument \texttt{family} of the function \texttt{glm}
+we chose \texttt{binomial}. Why ?
+
+\textbf{7.} What is the equation of the obtained model in the question
+1.5 ?
+
+\textbf{8.} Is the feature \texttt{Age} significant?
+
+\begin{rmdinsight}
+The \textbf{AIC} is the \textbf{Akaike Information Criterion}. You will
+use this while comparing multiple models. The model with lower value of
+AIC is better. Suppose that we have a statistical model of some data.
+Let \({\hat {L}}\) be the maximum value of the likelihood function for
+the model; let \(k\) be the number of estimated parameters in the model.
+Then the AIC value of the model is the following.
+
+\[ \text{AIC} = 2 k-2 \ln(\hat{L})\]
+
+where
+
+\begin{itemize}
+\tightlist
+\item
+  \(\hat{L}\) = the maximized value of the likelihood function of the
+  model \(M\), i.e. \(\hat{L}=p(x|{\hat{\beta }},M)\), where
+  \(\hat{\beta}\) are the parameter values that maximize the likelihood
+  function.
+\item
+  \(x\) = the observed data.
+\item
+  \(k\) = the number of free parameters to be estimated. If the model
+  under consideration is a linear regression, \(k\) is the number of
+  regressors, including the intercept.
+\end{itemize}
+\end{rmdinsight}
+
+\textbf{9.} Plot \texttt{Purchased} in function of \texttt{Age} and add
+the curve of the obtained logistic regression model.
+
+(\textbf{Hints}: First plot the point, then use the \texttt{curve()}
+function with oprtion \texttt{add=TRUE} to add the curve to the plot.
+The argument ``type'' of the function \texttt{predit()} must be
+``reponse'')
+
+You must obtain something like
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{img/glm1.png}
+\caption{}
+\end{figure}
+
+\begin{rmdinsight}
+\textbf{Extra}: A great R package for visualization if \texttt{ggplot2}.
+Take a look on this
+\href{http://www.r-graph-gallery.com/portfolio/ggplot2-package/}{link}
+for some examples. With this library we obtain the following plot for
+our model,
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{img/glm_ggplot.png}
+\caption{}
+\end{figure}
+\end{rmdinsight}
+
+I obtained the last figure with these lines of code,
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(ggplot2)}
+\KeywordTok{ggplot}\NormalTok{(training_set, }\KeywordTok{aes}\NormalTok{(}\DataTypeTok{x=}\NormalTok{Age, }\DataTypeTok{y=}\NormalTok{Purchased)) +}
+\StringTok{  }\KeywordTok{geom_point}\NormalTok{() +}
+\StringTok{  }\KeywordTok{stat_smooth}\NormalTok{(}\DataTypeTok{method=}\StringTok{"glm"}\NormalTok{, }\DataTypeTok{method.args=}\KeywordTok{list}\NormalTok{(}\DataTypeTok{family=}\StringTok{"binomial"}\NormalTok{), }\DataTypeTok{se=}\OtherTok{FALSE}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\textbf{10.} Now let us take another feature into account in the model.
+Fit a logistic regression model of purchasing the product in function of
+the age of the user and its salary.
+
+\textbf{11.} Are the predictors significant? Did the model get better by
+adding t he estimated salary?
+
+\textbf{12.} On the test set, predict the probability of purchasing the
+product by the users using the obtained model.
+
+\textbf{13.} Take a look on your predicted values for the variable
+\texttt{Purchased}. We predicted the probability that the user will
+purchase the product right? Now in order to compare your results with
+the real answers, transform the predicted values to 0 or 1 (1 if
+\textgreater{}0.5).
+
+\textbf{Hint}: You can easily do it with the \texttt{ifelse()} function.
+
+Now read the following about the evaluation of a classifier (of a
+classification model).
+
+\begin{rmdinsight}
+\textbf{Confusion matrix}: is a tabular representation of Actual vs
+Predicted values. This helps us to find the accuracy of the model. The
+different results from a binary classifier are true positives, true
+negatives, false positives, and false negatives. This is how the
+confusion matrix looks like:
+
+\includegraphics{img/cm.png} (Image source:
+\href{https://en.wikipedia.org/wiki/Confusion_matrix}{Wikipedia})
+
+You can calculate the \textbf{accuracy} of your model with:
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{img/cm1.png}
+\caption{}
+\end{figure}
+
+\textbf{Accuracy} is a key measure of performance, and is more
+specifically the rate at which the model is able to predict the correct
+value (classification or regression) for a given data point or
+observation. In other words, accuracy is the proportion of correct
+predictions out of all predictions made.
+
+The other two metrics from the confusion matrix worth discussing are
+\textbf{precision} and \textbf{recall}. Precision (positive predictive
+value) is the ratio of true positives to the total amount of positive
+predictions made (i.e., true or false). Said another way, precision
+measures the proportion of accurate positive predictions out of all
+positive predictions made.
+
+Recall on the other hand, or true positive rate, is the ratio of true
+positives to the total amount of actual positives, whether predicted
+correctly or not. So in other words, recall measures the proportion of
+accurate positive predictions out of all actual positive observations.
+
+A metric that is associated with precision and recall is called the
+F-score (also called F1 score), which combines them mathematically, and
+somewhat like a weighted average, in order to produce a single measure
+of performance based on the simultaneous values of both. Its values
+range from 0 (worst) to 1 (best).
+
+Another important concept to know about is the \textbf{\emph{Receiver
+Operating Characteristic}}, which when plotted, results in what's known
+as an ROC curve.
+
+\textbf{ROC Curve}: An ROC curve is a two-dimensional plot of
+\emph{sensitivity} (recall, or true positive rate) vs \emph{specificity}
+(false positive rate). The area under the curve is referred to as the
+\textbf{\emph{AUC}}, and is a numeric metric used to represent the
+quality and performance of the classifier (model).
+
+\begin{figure}[htbp]
+\centering
+\includegraphics{img/roc.png}
+\caption{}
+\end{figure}
+
+An AUC of 0.5 is essentially the same as random guessing without a
+model, whereas an AUC of 1.0 is considered a perfect classifier.
+Generally, the higher the AUC value the better, and an AUC above 0.8 is
+considered quite good.
+
+The higher the AUC value, the closer the curve gets to the upper left
+corner of the plot. One can easily see from the ROC curves then that the
+goal is to find and tune a model that maximizes the true positive rate,
+while simultaneously minimizing the false positive rate. Said another
+way, the goal as shown by the ROC curve is to correctly predict as many
+of the actual positives as possible, while also predicting as many of
+the actual negatives as possible, and therefore minimize errors
+(incorrect classifications) for both.
+\end{rmdinsight}
+
+\textbf{14.} Now to evaluate the predictions, compute the confusion
+matrix. What do you obtain ?
+
+(\textbf{Hint}: you can use the \texttt{table()} function).
+
+\textbf{15.} Calculate the accuracy, specificity, sensitivity and the
+precision of the model.
+
+\textbf{16.} Plot the ROC curve and calculate AUC value.
+
+\begin{rmdinsight}
+\textbf{Hints}: to plot it, install the \texttt{RCOC} package. Load and
+use the functions:
+
+\begin{itemize}
+\tightlist
+\item
+  \texttt{prediction()} to calculate the elements of the confusion
+  matrix.
+\item
+  \texttt{performance()} to calculate the AUC.
+\item
+  \texttt{plot()} to plot the ROC curve, you can plot the performance
+  calculated before.
+\item
+  \texttt{abline()} to plot a line of equation \texttt{y=x}.
+\end{itemize}
+\end{rmdinsight}
+
+\textbf{17.} Compare the AUC of the two models you fitted (one with only
+age and one with age and estimated salary) and plot their ROC curves in
+the same figure.
+
+◼
 
 
 \end{document}
