--- a/MLcourse/Machine-Learning.tex
+++ b/MLcourse/Machine-Learning.tex
@@ -2385,7 +2385,7 @@ For your submitted report, use the following YAML header:
 title: "Week 2"
 subtitle: "Multiple Linear Regression"
 author: LastName FirstName
-date: "2017-01-23 11:38:36"
+date: "2017-01-23 12:41:46"
 output:
   html_document:
     toc: true
@@ -2780,12 +2780,27 @@ method to estimate \(\beta_0,\beta_1,\ldots,\beta_p\).
 \section*{Report template}\label{report-template}
 \addcontentsline{toc}{section}{Report template}
 
-For this week, download the following template by clicking on this
-\href{files/LastName_FirstName_Week3.Rmd}{link} (right cligk and save
-link as). Save the template in your folder that you are going to use as
-working directory. Rename the file (replace LastName by your last name
-and FirstName by your first name). Open it in \texttt{Rstudio} and use
-it for your report to be submitted.
+Create a new RMarkdown file and replace the YAML header with these
+lines:
+
+\begin{verbatim}
+---
+title: "Week 3"
+subtitle: "Logistic Regression"
+author: LastName FirstName
+date: "23/01/2017"
+output:
+  html_document:
+    toc: true
+    toc_depth: 2
+    toc_float: true
+    theme: united
+    highlight: zenburn
+---
+\end{verbatim}
+
+Name the file \texttt{LastName\_FirstName\_Week3} and submit the html
+output.
 
 \section*{Social Networks Ads}\label{social-networks-ads}
 \addcontentsline{toc}{section}{Social Networks Ads}
